--- a/stock-analysis/stock.ipynb
+++ b/stock-analysis/stock.ipynb
@@ -11,23 +11,23 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: yfinance in /opt/conda/lib/python3.7/site-packages (0.1.70)\n",
-      "Requirement already satisfied: lxml>=4.5.1 in /opt/conda/lib/python3.7/site-packages (from yfinance) (4.8.0)\n",
       "Requirement already satisfied: numpy>=1.15 in /opt/conda/lib/python3.7/site-packages (from yfinance) (1.21.5)\n",
-      "Requirement already satisfied: requests>=2.26 in /opt/conda/lib/python3.7/site-packages (from yfinance) (2.27.1)\n",
-      "Requirement already satisfied: multitasking>=0.0.7 in /opt/conda/lib/python3.7/site-packages (from yfinance) (0.0.10)\n",
       "Requirement already satisfied: pandas>=0.24.0 in /opt/conda/lib/python3.7/site-packages (from yfinance) (1.3.5)\n",
+      "Requirement already satisfied: multitasking>=0.0.7 in /opt/conda/lib/python3.7/site-packages (from yfinance) (0.0.10)\n",
+      "Requirement already satisfied: requests>=2.26 in /opt/conda/lib/python3.7/site-packages (from yfinance) (2.27.1)\n",
+      "Requirement already satisfied: lxml>=4.5.1 in /opt/conda/lib/python3.7/site-packages (from yfinance) (4.8.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=0.24.0->yfinance) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=0.24.0->yfinance) (2021.3)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (1.26.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (2.0.12)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (1.26.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests>=2.26->yfinance) (3.3)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas>=0.24.0->yfinance) (1.16.0)\n",
       "Requirement already satisfied: feedparser in /opt/conda/lib/python3.7/site-packages (6.0.8)\n",
       "Requirement already satisfied: sgmllib3k in /opt/conda/lib/python3.7/site-packages (from feedparser) (1.0.0)\n",
       "Requirement already satisfied: html5lib in /opt/conda/lib/python3.7/site-packages (1.1)\n",
-      "Requirement already satisfied: six>=1.9 in /opt/conda/lib/python3.7/site-packages (from html5lib) (1.16.0)\n",
-      "Requirement already satisfied: webencodings in /opt/conda/lib/python3.7/site-packages (from html5lib) (0.5.1)\n"
+      "Requirement already satisfied: webencodings in /opt/conda/lib/python3.7/site-packages (from html5lib) (0.5.1)\n",
+      "Requirement already satisfied: six>=1.9 in /opt/conda/lib/python3.7/site-packages (from html5lib) (1.16.0)\n"
      ]
     }
    ],
@@ -50,7 +50,12 @@
     "import yfinance as yf\n",
     "from datetime import date, timedelta\n",
     "import feedparser\n",
-    "import pandas as pd"
+    "# import pandas as pd\n",
+    "# import urllib.request\n",
+    "# from bs4 import BeautifulSoup\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "import time\n"
    ]
   },
   {
@@ -138,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://finance.yahoo.com/news/only-one-way-twitter-dodge-172150330.html'"
+       "'https://www.marketwatch.com/story/why-semiconductor-stocks-are-almost-uninvestable-despite-record-earnings-amid-a-global-shortage-11650911716?siteid=yhoof2&yptr=yahoo'"
       ]
      },
      "execution_count": 7,
@@ -154,40 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c31fc22-c694-4e3a-b44b-2a1aac798b1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# page = requests.get(url)\n",
-    "# htmlDoc = html.fromstring(page.content)\n",
-    "\n",
-    "# def getPage(url):\n",
-    "#     driver = webdriver.Chrome()\n",
-    "#     driver.get(url)\n",
-    "#     return driver.find_element_by_name(\"body\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f074a199-09d2-46cf-992c-b1a3017cf476",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#getPage(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71ed9c9d-b0e3-432f-baa4-0c95264ab3e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "e7a5e01e-5e85-40ab-8744-b0aeedac9803",
    "metadata": {},
    "outputs": [],
@@ -197,42 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "17d362e6-6494-4495-8de4-7bb28d8ca73c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://groceries.asda.com/search/yogurt\n",
-      "Number of results 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import libraries\n",
-    "import urllib.request\n",
-    "from bs4 import BeautifulSoup\n",
-    "# specify the url\n",
-    "urlpage = 'https://groceries.asda.com/search/yogurt' \n",
-    "print(urlpage)\n",
-    "# query the website and return the html to the variable 'page'\n",
-    "page = urllib.request.urlopen(urlpage)\n",
-    "# parse the html using beautiful soup and store in variable 'soup'\n",
-    "soup = BeautifulSoup(page, 'html.parser')\n",
-    "# print(soup.prettify())\n",
-    "# find product items\n",
-    "# at time of publication, Nov 2018:\n",
-    "# results = soup.find_all('div', attrs={'class': 'listing category_templates clearfix productListing'})\n",
-    "# updated Nov 2019:\n",
-    "results = soup.find_all('div', attrs={'class': 'co-product'})\n",
-    "print('Number of results', len(results))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "a2ab96f6-f74b-4b60-997d-f1cba8250a74",
    "metadata": {},
    "outputs": [
@@ -240,21 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://finance.yahoo.com/news/buy-3-electric-vehicle-stocks-005750597.html\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:33: DeprecationWarning: find_elements_by_class_name is deprecated. Please use find_elements(by=By.CLASS_NAME, value=name) instead\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Body:  1\n",
+      "https://finance.yahoo.com/news/buy-3-electric-vehicle-stocks-005750597.html\n",
       "Content: We all know how the markets started this year by falling into correction territory. Electric Vehicle (EV) stocks were no exception, although there was no clear trend in the segment. Major EVs have fallen between 5% and 50% year-to-date, compared to the S&P 500’s 6% drop.\n",
       "Inflation is a key to understanding that performance. EVs will require new factory processes in their manufacture, and new sets of raw materials – and those raw materials don’t come cheap. A combination of increasing demand, production bottlenecks, and a snarled distribution chain have pushed up prices for lithium, nickel, and cobalt, vital battery metals, anywhere from 16% to 70%. And in addition to metals, auto companies are finding it difficult to procure everything from semiconductor chips to window glass to flooring carpets. The result is a surge in EV prices, which on average now run some $10,000 per unit higher than combustion vehicles.\n",
       "But this isn’t the only chapter in the story. EVs are also showing rapid technological improvements, with battery efficiency and vehicle range closing in on gasoline vehicle averages, and charging infrastructure expanding its footprint and adding newer ‘fast charging’ stations. We don’t know what the final look of the EV market will be; it’s clearly still evolving, and we’re in the early stages of the shift – but the consensus among the sector experts is, the future is electric.\n",
@@ -267,11 +197,7 @@
    ],
    "source": [
     "# import libraries\n",
-    "import urllib.request\n",
-    "from bs4 import BeautifulSoup\n",
-    "from selenium import webdriver\n",
-    "import time\n",
-    "import pandas as pd\n",
+    "\n",
     "# specify the url\n",
     "urlpage = 'https://groceries.asda.com/search/yogurt' \n",
     "urlpage = url\n",
@@ -298,43 +224,12 @@
     "# results = driver.find_elements_by_xpath(\"//*[@id='componentsContainer']//*[contains(@id,'listingsContainer')]//*[@class='product active']//*[@class='title productTitle']\")\n",
     "# updated Nov 2019:\n",
     "# results = driver.find_elements(value=\"/html/body/div[3]/div/main/div[1]/div/div/div/div/article/div/div/div/div/div/div[2]/div[4]\")\n",
-    "results = driver.find_elements_by_class_name(name=\"caas-body\")\n",
-    "print('Body: ', len(results))\n",
+    "# results = driver.find_elements_by_class_name(name=\"caas-body\")\n",
+    "results = driver.find_elements(by=By.CLASS_NAME, value=\"caas-body\")\n",
+    "#print('Body: ', len(results))\n",
     "print('Content:', results[0].text)\n",
     "driver.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec47adbc-63a8-4629-a1bc-2138a19fa123",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b459898f-56c4-4e47-8d0f-8373f6456e99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45b28207-33a9-404a-bdfa-54eeb8f72e19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d41bdcf9-d092-4301-a940-da59a04b1684",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
